# fpga_sr_mvp

./: .gitignore  README.md  dataset.py  export_int8_weights.py  infer.py  inspect_activations.py  inspect_weights.py  model.py  pyproject.toml  train.py
